--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "application-name",
+  "name": "chat",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.0alpha1",
+    "express": "*",
     "jade": "*",
     "less-middleware": "*"
   }
